# rustconf-2023-signals

./: .gitignore  Cargo.toml  README.md  dl-manifest.toml  download-manifest.toml
.github/workflows/: ci.yml
download-manager/: Cargo.toml  README.md
download-manager/src/: command.rs  db.rs  lib.rs  main.rs  manifest.rs
